Adds List case